getting pipeline workingg

--- a/environment.yaml
+++ b/environment.yaml
@@ -8,7 +8,8 @@ dependencies:
   - requests
   - numpy
   - tblib
-  - python-ldas-tools-framecpp
+  - ldas-tools-framecpp=2.7.0
+  - python-ldas-tools-framecpp=2.6.9
   - pip
   - pip:
       - -e ./stillwater
